--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Shape Tracker</title>
+  <title>Team Week RPG</title>
+  <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 </head>
 <body>
-  <h3>Enter three lengths to determine if they can make a triangle.</h3>
-  <form id="triangle-checker-form">
-    <label for="length1">Enter a number:</label>
-    <input id="length1" type="number">
-    <label for="length2">Enter a number:</label>
-    <input id="length2" type="number">
-    <label for="length3">Enter a number:</label>
-    <input id="length3" type="number">
-    <button type="submit">Submit</button>
-  </form>
-  <ul id="response"></ul>
-  <h3>Enter the lengths of a rectangle's two sides to determine its area.</h3>
-  <form id="rectangle-area-form">
-    <label for="rect-length1">Enter a number:</label>
-    <input id="rect-length1" type="number">
-    <label for="rect-length2">Enter a number:</label>
-    <input id="rect-length2" type="number">
-    <button type="submit">Submit</button>
-  </form>
-  <ul id="response2"></ul>
+  <img src="./../assets/img/bg1.png" alt="basemap" usemap="#basemap">
+  <img src="./../assets/img/character.png" alt="char" id="char">
+
+  <map name="basemap">
+    <area onblur="this.focus()" autofocus id="top-left" coords="17,10,261,210" shape="rect"> <!--instead of href to an HTML page, we would use JavaScript click event listener-->
+  </map>
 </body>
 </html>
