add custom font and bootstrap
Co-authored-by: Anton Ch <anton3ch@icloud.com>
Co-authored-by: Vera Weikel <vera.weikel@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,12 @@
 <head>
   <title>Team Week RPG</title>
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> -->
 </head>
 <body>
+  <h1 class="text-center">RPGlicious</h1>
   <div class="container">
-    
-    <div class="maps">
+      <div class="maps">
       <img src="./../assets/img/character.png" alt="char" id="char">
 
       <div id="base">
@@ -26,10 +27,11 @@
 
     <div id="text">
       <div id="nav">
+
         Nav bar
       </div>
       <div id="story">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean lectus tellus, ultrices ut imperdiet a, tempus in sem. Aliquam rhoncus nunc tellus, vel varius dui dignissim ut. Praesent vel ipsum tellus. Vestibulum vel rutrum dolor. Phasellus porta placerat aliquet. Sed elementum sit amet lectus volutpat placerat. Vestibulum tempus tortor vel lacus dictum maximus. Donec ullamcorper porta lacinia. Vivamus malesuada sem at purus consectetur, at accumsan purus luctus. In interdum dignissim sem sit amet eleifend. Suspendisse vitae dictum velit, ac semper ex. Fusce pretium velit ut lectus porttitor, sed aliquam felis rutrum. Praesent lobortis ornare orci id facilisis. Nulla vitae blandit eros. Aliquam convallis libero lobortis ipsum iaculis, molestie fringilla lectus commodo.</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ornare orci id facilisis. Nulla vitae blandit eros.</p>
       </div>
     </div>
   </div>
