add character movement using css animation
Co-authored-by: Anton Ch <anton3ch@icloud.com>
Co-authored-by: Vera Weikel <vera.weikel@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> -->
 </head>
 <body>
-  <h1 class="text-center">RPGlicious</h1>
+  <h1 class="header text-center">~ The Bug Slayer ~</h1>
   <div class="container">
       <div class="maps">
       <img src="./../assets/img/character.png" alt="char" id="char">
@@ -14,7 +14,7 @@
       <div id="base">
         <img src="./../assets/img/bg1.png" alt="basemap" usemap="#basemap">
         <map name="basemap">
-          <area onblur="this.focus()" autofocus id="top-left" coords="17,10,261,210" shape="rect"> <!--instead of href to an HTML page, we would use JavaScript click event listener-->
+          <area id="top-left" coords="17,10,261,210" shape="rect"> <!--instead of href to an HTML page, we would use JavaScript click event listener-->
         </map>
       </div>
       <div id="island" class="hidden">
@@ -27,7 +27,6 @@
 
     <div id="text">
       <div id="nav">
-
         Nav bar
       </div>
       <div id="story">
