--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,13 @@
       <img src="./../assets/img/character.png" alt="char" id="char">
 
       <div id="base">
-        <img src="./../assets/img/bg1.png" alt="basemap" usemap="#basemap">
+        <img src="./../assets/img/starting-bg.png" alt="basemap" usemap="#basemap">
         <map name="basemap">
           <area id="top-left" coords="17,10,261,210" shape="rect"> <!--instead of href to an HTML page, we would use JavaScript click event listener-->
         </map>
       </div>
       <div id="island" class="hidden">
-        <img src="./../assets/img/island-scene.png" alt="basemap" usemap="#islandmap">
+        <img src="./../assets/img/second-bg.png" alt="basemap" usemap="#islandmap">
         <map name="islandmap">
           <area id="island" alt="island" coords="317,638,228,449" shape="rect">
         </map>
