reorganize divs and assign classes to image maps
Co-authored-by: Vera Weikel <vera.weikel@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -6,33 +6,33 @@
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> -->
 </head>
 <body>
+
   <h1 class="header text-center">~ The Bug Slayer ~</h1>
+
   <div class="container">
       <div class="maps">
-      <img src="./../assets/img/character.png" alt="char" id="char">
+        <img src="./../assets/img/character.png" alt="char" id="char">
 
-      <div id="base">
-        <img src="./../assets/img/starting-bg.png" alt="basemap" usemap="#basemap">
+        <img id="base" src="./../assets/img/starting-bg.png" alt="basemap" usemap="#basemap">
         <map name="basemap">
-          <area id="top-left" coords="17,10,261,210" shape="rect"> <!--instead of href to an HTML page, we would use JavaScript click event listener-->
+          <area id="top-left" coords="389,375,509,639" shape="rect"> <!--instead of href to an HTML page, we would use JavaScript click event listener-->
         </map>
-      </div>
-      <div id="island" class="hidden">
-        <img src="./../assets/img/second-bg.png" alt="basemap" usemap="#islandmap">
-        <map name="islandmap">
-          <area id="island" alt="island" coords="317,638,228,449" shape="rect">
-        </map>
-      </div>
-    </div>
 
+        <img id="island" class="hidden" src="./../assets/img/second-bg.png" alt="secondmap" usemap="#islandmap" >
+        <map name="islandmap">
+          <area id="island" alt="island" coords="394,328,640,629" shape="rect">
+        </map>
+        
+        <img id="thirdmap" class="hidden" src="./../assets/img/third-bg.png" alt="third-bg" usemap="#thirdmap">
+        <map name="thirdmap">
+          <area id="thirdmap" alt="thirdmap" coords="317,638,228,449" shape="rect">
+        </map>
+      </div>
+ 
     <div id="text">
-      <div id="nav">
-        Nav bar
-      </div>
-      <div id="story">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ornare orci id facilisis. Nulla vitae blandit eros.</p>
-      </div>
     </div>
   </div>
+
 </body>
 </html>
