add enemy sprite
Co-authored-by: Anton Ch <anton3ch@icloud.com>

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <div class="container">
       <div class="maps">
         <img src="./../assets/img/character.png" alt="char" id="char">
+        <img src="./../assets/img/monster.png" alt="enemy" id="enemy" class="hidden">
 
         <img id="base" src="./../assets/img/starting-bg.png" alt="basemap" usemap="#basemap">
         <map name="basemap">
@@ -20,7 +21,7 @@
 
         <img id="island" class="hidden" src="./../assets/img/second-bg.png" alt="secondmap" usemap="#islandmap" >
         <map name="islandmap">
-          <area id="island" alt="island" coords="394,328,640,629" shape="rect">
+          <!-- <area id="island-click" alt="island" coords="394,328,640,629" shape="rect"> -->
         </map>
         
         <img id="thirdmap" class="hidden" src="./../assets/img/third-bg.png" alt="third-bg" usemap="#thirdmap">
