--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,20 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ornare orci id facilisis. Nulla vitae blandit eros.</p>
     </div>
   </div>
-
+  <div class="testing">
+    <p>player options:</p>
+    <button type="button" id="fight">fight</button>
+    <button type="button" id="heal">heal</button>
+    <button type="button" id="flee">flee</button>
+    <p>player health:</p>
+    <p id="currenthealth"></p>
+  </div>
+  <div class="testing">
+    <p>enemy details</p>
+    <button type="button">fight</button>
+    <button type="button">heal</button>
+    <p>enemy health:</p>
+    <p id="enemyhealth"></p>
+  </div>
 </body>
 </html>
