WIP: end of day commit

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,7 @@
     </div>
   </div>
   <div class="testing">
+    <button type="button" id="start-battle">battle</button>
     <p>player options:</p>
     <button type="button" id="fight">fight</button>
     <button type="button" id="heal">heal</button>
