update battle functionality

--- a/src/index.html
+++ b/src/index.html
@@ -34,32 +34,20 @@
         </map>
       </div>
 
-
- 
     <div id="text">
-      <span class="sidebarhead">Welcome</span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ornare orci id facilisis. Nulla vitae blandit eros.</p>
+      <div id="sidebar-heading" class="">
+        <span class="sidebarhead">Welcome</span>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ornare orci id facilisis. Nulla vitae blandit eros.</p>
+      </div>
       <div id="battleStats" class="hidden">
-        <button class="btn btn-primary" id="fightBtn">fight!</button>
-        <button class="btn btn-primary" id="fleeBtn">flee!</button>
+        <p>enemy health:</p>
+        <p id="enemy-health"></p>
+        <p>player health:</p>
+        <p id="player-health"></p>
+        <div id="battle-results"></div>
+        <div><button type="button" id="fight" class="btn btn-primary">Fight</button></div>
       </div>
     </div>
-  </div>
-  <div class="testing">
-    <button type="button" id="start-battle">battle</button>
-    <p>player options:</p>
-    <button type="button" id="fight">fight</button>
-    <button type="button" id="heal">heal</button>
-    <button type="button" id="flee">flee</button>
-    <p>player health:</p>
-    <p id="currenthealth"></p>
-  </div>
-  <div class="testing">
-    <p>enemy details</p>
-    <button type="button">fight</button>
-    <button type="button">heal</button>
-    <p>enemy health:</p>
-    <p id="enemyhealth"></p>
   </div>
 </body>
 </html>
