--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       <div class="maps">
         <img src="./../assets/img/character.gif" alt="char" id="char">
         <img src="./../assets/img/monster.gif" alt="enemy" id="enemy" class="hidden">
+        <img src="./../assets/img/bottom.png" alt="bottom" id="bottom">
         <img id="base" src="./../assets/img/starting-bg.png" alt="basemap" usemap="#basemap" height="640" width="640">
         <map name="basemap">
           <area id="top-left" coords="389,375,509,639" shape="rect"> <!--instead of href to an HTML page, we would use JavaScript click event listener-->
@@ -22,44 +23,39 @@
         <map name="island">
           <area id="island-click" alt="island" coords="394,328,640,629" shape="rect">
         </map>
-
+ 
         <img id="thirdmap" class="hidden" src="./../assets/img/third-bg.png" alt="third-bg" usemap="#thirdmap" height="640" width="640">
         <map name="thirdmap">
           <area id="thirdmap" alt="thirdmap" coords="317,638,228,449" shape="rect">
         </map>
         
-        <img id="battle" class="hidden" src="./../assets/img/second-bg.png" alt="battle" usemap="#battle" >
+        <img id="battle" class="hidden" src="./../assets/img/battle.png" alt="battle" usemap="#battle" >
         <map name="battle">
           <area id="battle" alt="battle" coords="317,638,228,449" shape="rect">
         </map>
       </div>
 
+      <div id="controls" class="hidden">
+        <button type="button" id="fight" class="button-75">fight</button>
+        <button type="button" id="heal" class="button-75">heal</button>
+        <button type="button" id="flee" class="button-75">flee</button>
+      </div>
+      <div id="stats" class="hidden">
+        <p>Player health:</p>
+        <p id="currenthealth"></p>
+        <p>Enemy health:</p>
+        <p id="enemyhealth"></p>
+      </div>
 
- 
     <div id="text">
       <span class="sidebarhead">Welcome</span>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ornare orci id facilisis. Nulla vitae blandit eros.</p>
       <div id="battleStats" class="hidden">
         <button class="btn btn-primary" id="fightBtn">fight!</button>
-        <button class="btn btn-primary" id="fleeBtn">flee!</button>
+        <!-- <button class="btn btn-primary" id="fleeBtn">flee!</button> -->
       </div>
     </div>
   </div>
-  <div class="testing">
-    <button type="button" id="start-battle">battle</button>
-    <p>player options:</p>
-    <button type="button" id="fight">fight</button>
-    <button type="button" id="heal">heal</button>
-    <button type="button" id="flee">flee</button>
-    <p>player health:</p>
-    <p id="currenthealth"></p>
-  </div>
-  <div class="testing">
-    <p>enemy details</p>
-    <button type="button">fight</button>
-    <button type="button">heal</button>
-    <p>enemy health:</p>
-    <p id="enemyhealth"></p>
-  </div>
+
 </body>
 </html>
