--- a/src/index.html
+++ b/src/index.html
@@ -13,11 +13,8 @@
       <div class="maps">
         <img src="./../assets/img/character.gif" alt="char" id="char">
         <img src="./../assets/img/monster.gif" alt="enemy" id="enemy" class="hidden">
-        <img src="./../assets/img/bottom.png" alt="bottom" id="bottom">
+        <img src="./../assets/img/bottom.png" alt="bottom" id="bottom-arrow">
         <img id="base" src="./../assets/img/starting-bg.png" alt="basemap" usemap="#basemap" height="640" width="640">
-        <map name="basemap">
-          <area id="top-left" coords="389,375,509,639" shape="rect"> <!--instead of href to an HTML page, we would use JavaScript click event listener-->
-        </map>
 
         <img id="island" class="hidden" src="./../assets/img/second-bg.png" alt="secondmap" usemap="#island" height="640" width="640">
         <map name="island">
