--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
         <img src="./../assets/img/bottom.png" alt="bottom" id="bottom-arrow">
         <img id="base" src="./../assets/img/starting-bg.png" alt="basemap" usemap="#basemap" height="640" width="640">
 
-        <img id="island" class="hidden" src="./../assets/img/second-bg.png" alt="secondmap" usemap="#island" height="640" width="640">
-        <map name="island">
-          <area id="island-click" alt="island" coords="394,328,640,629" shape="rect">
+        <img id="secondmap" class="hidden" src="./../assets/img/second-bg.png" alt="secondmap" usemap="#secondmap" height="640" width="640">
+        <map name="secondmap">
+          <area id="secondmap-click" alt="secondmap" coords="394,328,640,629" shape="rect">
         </map>
  
         <img id="thirdmap" class="hidden" src="./../assets/img/third-bg.png" alt="third-bg" usemap="#thirdmap" height="640" width="640">
