--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
       <div class="maps">
         <img src="./../assets/img/character.gif" alt="char" id="char">
         <img src="./../assets/img/monster.gif" alt="enemy" id="enemy" class="hidden">
-        <img src="./../assets/img/bottom.png" alt="bottom" id="bottom">
+        <img src="./../assets/img/bottom.png" alt="bottom" id="bottom-arrow">
         <img id="base" src="./../assets/img/starting-bg.png" alt="basemap" usemap="#basemap" height="640" width="640">
         <map name="basemap">
           <area id="top-left" coords="389,375,509,639" shape="rect"> <!--instead of href to an HTML page, we would use JavaScript click event listener-->
@@ -43,9 +43,9 @@
       </div>
       <div id="stats" class="hidden">
         <p>Player health:</p>
-        <p id="currenthealth"></p>
+        <p id="player-health"></p>
         <p>Enemy health:</p>
-        <p id="enemyhealth"></p>
+        <p id="enemy-health"></p>
       </div>
 
     <div id="text">
