--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,8 @@
         <span class="sidebarhead">Welcome</span>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ornare orci id facilisis. Nulla vitae blandit eros.</p>
       </div>
+      <div id="battle-log" class="hidden"></div>
+      <div id="battle-results" class="hidden"></div>
       <div id="battleStats" class="hidden">
         <button class="btn btn-primary" id="battle-start">battle start!</button> 
       </div>  
