WIP: fix divs for combat log

--- a/src/index.html
+++ b/src/index.html
@@ -64,8 +64,8 @@
         <span class="hidden" id="secondmap-message"><p>You approach a clearing where a DARK WIZARD blocks your path.</p>
           <p>The earth starts shaking beneath you...</p></span>
       </div>
-      <div id="battle-log" class="hidden"></div>
-      <div id="battle-results" class="hidden"></div>
+      <span id="battle-log" class="hidden"></div>
+      <span id="battle-results" class="hidden"></div>
       <div id="battleStats" class="hidden text-center">
         <button class="btn btn-primary" id="battle-start">battle start!</button> 
       </div>  
