--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
         <img src="./../assets/img/character.gif" alt="char" id="char">
         <img src="./../assets/img/monster.gif" alt="enemy" id="enemy" class="hidden">
         <img src="./../assets/img/bottom.png" alt="bottom" id="bottom-arrow">
+        <img src="./../assets/img/right-arrow.png" alt="right" id="right-arrow" class="hidden">
         <img id="base" src="./../assets/img/starting-bg.png" alt="basemap" height="640" width="640">
 
         <img id="secondmap" class="hidden" src="./../assets/img/second-bg.png" alt="secondmap" usemap="#secondmap" height="640" width="640">
@@ -33,9 +34,9 @@
       </div>
 
       <div id="controls" class="hidden">
-        <button type="button" id="fight" class="button-75">fight</button>
-        <button type="button" id="heal" class="button-75">heal</button>
-        <button type="button" id="flee" class="button-75">flee</button>
+        <button type="button" id="fight" class="button-75">Fight</button>
+        <!-- <button type="button" id="heal" class="button-75">Heal</button> -->
+        <button type="button" id="flee" class="button-75">Flee</button>
       </div>
 
       <div id="stats" class="hidden">
@@ -50,22 +51,34 @@
         <h2 class="sidebarhead">Hello, adventurer</h2>
         <p>What shall we call you?</p>
         <form id="name-form">
-          <input type="text" id="name-input">
+          <input type="text" id="name-input" required>
           <button type="submit">enter</button>
         </form>
       </div>
       <div>
         <span class="hidden" id="intro-message">
         <h2 class="sidebarhead">Welcome to the Ancient Woods</h2>
-        <p>You are <span id="name-goes-here"></span>.</p>
-        <p>You are searching for the mythical PROGRAMMING CODEX. You must journey through the ANCIENT WOODS to find it.</p>
-        <p>Start your journey by clicking on the ARROW down the STONE PATH just ahead.</p>
+        You are <span id="name-goes-here"></span>.
+        You are searching for the mythical PROGRAMMING CODEX. You must journey through the ANCIENT WOODS to find it.
+        Start your journey by clicking on the ARROW down the STONE PATH just ahead.</span>
 
-        <span class="hidden" id="secondmap-message"><p>You approach a clearing where a DARK WIZARD blocks your path.</p>
-          <p>The earth starts shaking beneath you...</p></span>
+        <span id="secondmap-arrival" class="hidden">You approach a clearing where a DARK WIZARD blocks your path. You must fight him to continue!</span>
+    
+        <span id="battle-startmessage" class="hidden">The earth starts shaking beneath you...</span>
+
+        <span id="secondmap-return" class="hidden">You have successfully DEFEATED the DARK WIZARD.
+          You feel your spirit return to the ANCIENT WOODS. Your journey continues...</span>
+
+        <span id="thirdmap-message" class="hidden">You've made it! The shining beacon of the PROGRAMMING CODEX draws you to it immediately.
+          <span id="name-goes-here"></span>'s PROGRAMMING skill has increased by 100.
+          <span id="name-goes-here"></span> has won the game!</span>
+
       </div>
       <span id="battle-log" class="hidden"></span>
       <span id="battle-results" class="hidden"></span>
+      <span id="return" class="hidden">
+        <button type="button" id="return-btn" class="button-75">Return</button>
+      </span>
       <div id="battleStats" class="hidden text-center">
         <button class="btn btn-primary" id="battle-start">battle start!</button> 
       </div>  
